--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 *::before,
 *::after {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Remove default margin */
@@ -32,12 +32,14 @@ html:focus-within {
 }
 
 /* Set core body defaults */
+html,
 body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   font: 16px "AdonisC", sans-serif;
   line-height: 1.2;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 /* A elements that don't have a class get default styles */
@@ -69,11 +71,11 @@ select {
   *::before,
   *::after {
     -webkit-animation-duration: 0.01ms !important;
-            animation-duration: 0.01ms !important;
+    animation-duration: 0.01ms !important;
     -webkit-animation-iteration-count: 1 !important;
-            animation-iteration-count: 1 !important;
+    animation-iteration-count: 1 !important;
     -webkit-transition-duration: 0.01ms !important;
-            transition-duration: 0.01ms !important;
+    transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
 }
@@ -81,7 +83,8 @@ select {
 /* fonts */
 @font-face {
   font-family: "AdonisC";
-  src: url("./media/fonts/AdonisC-BoldItalic.woff2") format("woff2"), url("./media/fonts/AdonisC-BoldItalic.woff") format("woff");
+  src: url("./media/fonts/AdonisC-BoldItalic.woff2") format("woff2"),
+    url("./media/fonts/AdonisC-BoldItalic.woff") format("woff");
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -89,7 +92,8 @@ select {
 
 @font-face {
   font-family: "AdonisC";
-  src: url("./media/fonts/AdonisC-Italic.woff2") format("woff2"), url("./media/fonts/AdonisC-Italic.woff") format("woff");
+  src: url("./media/fonts/AdonisC-Italic.woff2") format("woff2"),
+    url("./media/fonts/AdonisC-Italic.woff") format("woff");
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -97,7 +101,8 @@ select {
 
 @font-face {
   font-family: "AdonisC";
-  src: url("./media/fonts/AdonisC-Bold.woff2") format("woff2"), url("./media/fonts/AdonisC-Bold.woff") format("woff");
+  src: url("./media/fonts/AdonisC-Bold.woff2") format("woff2"),
+    url("./media/fonts/AdonisC-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -105,7 +110,8 @@ select {
 
 @font-face {
   font-family: "Ancient Kyiv";
-  src: url("./media/fonts/AncientKyiv.woff2") format("woff2"), url("./media/fonts/AncientKyiv.woff") format("woff");
+  src: url("./media/fonts/AncientKyiv.woff2") format("woff2"),
+    url("./media/fonts/AncientKyiv.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -113,7 +119,8 @@ select {
 
 @font-face {
   font-family: "AdonisC";
-  src: url("./media/fonts/AdonisC.woff2") format("woff2"), url("./media/fonts/AdonisC.woff") format("woff");
+  src: url("./media/fonts/AdonisC.woff2") format("woff2"),
+    url("./media/fonts/AdonisC.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -121,7 +128,8 @@ select {
 
 @font-face {
   font-family: "AmoreCTT";
-  src: url("./media/fonts/AmoreC.woff2") format("woff2"), url("./media/fonts/AmoreC.woff") format("woff");
+  src: url("./media/fonts/AmoreC.woff2") format("woff2"),
+    url("./media/fonts/AmoreC.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -129,7 +137,8 @@ select {
 
 @font-face {
   font-family: "Evangelie";
-  src: url("./media/fonts/Evangelie.woff2") format("woff2"), url("./media/fonts/Evangelie.woff") format("woff");
+  src: url("./media/fonts/Evangelie.woff2") format("woff2"),
+    url("./media/fonts/Evangelie.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -137,7 +146,8 @@ select {
 
 @font-face {
   font-family: "SafronModern";
-  src: url("./media/fonts/SafronModern.woff2") format("woff2"), url("./media/fonts/SafronModern.woff") format("woff");
+  src: url("./media/fonts/SafronModern.woff2") format("woff2"),
+    url("./media/fonts/SafronModern.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -169,7 +179,7 @@ button {
   background: none;
   border: none;
   font-size: 1.3rem;
-  font-family: 'AmoreCTT', sans-serif;
+  font-family: "AmoreCTT", sans-serif;
   cursor: pointer;
   padding: 0;
 }
@@ -191,8 +201,14 @@ h2 {
     border-radius: 10px;
     border: 2px solid #e4e4e4;
     background-clip: content-box;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #005BBB), color-stop(50%, #FFD500));
-    background: linear-gradient(to bottom, #005BBB 50%, #FFD500 50%);
+    background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      color-stop(50%, #005bbb),
+      color-stop(50%, #ffd500)
+    );
+    background: linear-gradient(to bottom, #005bbb 50%, #ffd500 50%);
   }
 }
 
@@ -224,8 +240,8 @@ h2 {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   width: 100%;
   height: 100vh;
 }
@@ -243,8 +259,8 @@ h2 {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   width: 100%;
   margin-top: auto;
   margin-bottom: 1.5rem;
@@ -256,7 +272,7 @@ h2 {
 }
 
 .intro__info-button::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 100%;
   left: calc(50% - 0.8rem);
@@ -270,11 +286,11 @@ h2 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   font-size: 1.1rem;
   margin-bottom: 1rem;
 }
@@ -298,11 +314,11 @@ h2 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   position: relative;
 }
 
