--- a/style.scss
+++ b/style.scss
@@ -31,10 +31,11 @@ html:focus-within {
 }
 
 /* Set core body defaults */
+html,
 body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
-  font: 16px "AdonisC", sans-serif;
+  font-family: "AdonisC", sans-serif;
   line-height: 1.2;
   overflow-x: hidden;
 }
@@ -204,7 +205,7 @@ h2 {
 }
 
 .content-section{
-    padding: 4rem 0;
+    padding: 5rem 0;
 }
 
 .decorative-letter{
@@ -227,17 +228,17 @@ h2 {
     width: 100%;
     text-align: center;
     font-size: 2.5rem;
-    margin-top: 5rem;
+    margin-top: 4rem;
   }
   &__info {
       display: flex;
       flex-direction: column;
     width: 100%;
     margin-top: auto;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
     &-button{
         position: relative;
-        margin-bottom: 2.2rem;
+        margin-bottom: 2rem;
         &::after{
             content: '';
             position: absolute;
@@ -281,7 +282,7 @@ h2 {
 }
 .paralax-section video{ 
     min-width: 100%;
-    height: 100%;
+    min-height: 100%;
     position: fixed;
     top:0;
     z-index: -999;
@@ -294,4 +295,33 @@ h2 {
   text-transform: uppercase;
   letter-spacing: 1px;
   -webkit-text-stroke: 0.5px black;
+}
+
+.toronto{
+    &__wrapper{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    &__row{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 1.5rem;
+    }
+    &__text{
+        width: 45%;
+    }
+    &__img{
+        width: 45%;
+        height: auto;
+        object-fit: cover;
+    }
+    &__paragraph{
+        max-width: 515px;
+        width: 100%;
+        margin: 0 auto;
+        text-align: justify;
+    }
 }
