--- a/style.scss
+++ b/style.scss
@@ -518,3 +518,62 @@ h2 {
     }
   }
 }
+.ragulivna {
+  &__wrapper {
+    width: 100%;
+    display: flex;
+  }
+  &__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex: 0 0 40%;
+    padding-left: 1rem;
+    h2 {
+      width: 100%;
+      text-align: center;
+    }
+  }
+}
+.ragulivna__swiper{
+    max-width: 60%;
+    width: 100%;
+    margin-left: 20px;
+    overflow: hidden;
+    max-height: 450px;
+    height: 100%;
+    & img {
+      height: auto;
+      object-fit: cover;
+      cursor: grab;
+    }
+}
+
+#idea .history__img{
+  flex: 0 0 60%;
+}
+
+#idea .history__info{
+  flex: 0 0 40%;
+}
+#bag .history__img{
+  flex: 0 0 30%;
+}
+
+#bag .history__info{
+  flex: 0 0 40%;
+}
+#bag .history__wrapper{
+  align-items: center;
+  justify-content: center;
+}
+
+#end{
+  padding-bottom: 1rem;
+}
+#end .start__text{
+  margin-bottom: 3rem;
+}
+#end .decorative-letter{
+  vertical-align: 20px;
+}
